Add -ftree-vectorize for neon hard to truely enable NEON

--- a/.cproject
+++ b/.cproject
@@ -46,6 +46,9 @@
 								<option id="com.renesas.cdt.core.Compiler.option.misc53.1846886635" name="Place each data item into its own section in the output file(-fdata-sections)" superClass="com.renesas.cdt.core.Compiler.option.misc53" value="true" valueType="boolean"/>
 								<option id="com.renesas.cdt.core.Compiler.option.misc19.1465574247" name="Place each function into its own section in the output file(-ffunction-sections)" superClass="com.renesas.cdt.core.Compiler.option.misc19" value="true" valueType="boolean"/>
 								<option id="com.renesas.cdt.core.Compiler.option.misc57.1237564976" name="Align branch targets to a power-of-two boundary (-falign-jumps)" superClass="com.renesas.cdt.core.Compiler.option.misc57" value="true" valueType="boolean"/>
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.rz.Debug.Compiler.option.library.userDefinedOptions.798982622" name="User Defined Options" superClass="com.renesas.cdt.rz.Debug.Compiler.option.library.userDefinedOptions" valueType="stringList">
+									<listOptionValue builtIn="false" value="-ftree-vectorize"/>
+								</option>
 								<inputType id="%Base.Compiler.C.InputType.Id.199947256" name="C Input" superClass="%Base.Compiler.C.InputType.Id"/>
 								<inputType id="Base.Compiler.CPP.InputType.Id.1340064726" name="C++ Input" superClass="Base.Compiler.CPP.InputType.Id"/>
 							</tool>
